--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,8 @@ fastlane/test_output
 iOSInjectionProject/
 Demo.mp4
 RSSchool_T9/.DS_Store
+RSSchool_T9/Start_Project/Data/.DS_Store
+RSSchool_T9/Start_Project/Data/Static/.DS_Store
+RSSchool_T9/Start_Project/Assets.xcassets/.DS_Store
+RSSchool_T9/Start_Project/.DS_Store
+.DS_Store
