--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,5 @@ RSSchool_T9/Start_Project/Data/Static/.DS_Store
 RSSchool_T9/Start_Project/Assets.xcassets/.DS_Store
 RSSchool_T9/Start_Project/.DS_Store
 .DS_Store
+RSSchool_T9/.DS_Store
+RSSchool_T9/.DS_Store
